<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:textAlignment="center"
    tools:context=".fragments.WeatherFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/pincode_ET"
        style="@style/EditTextCustomMain"
        android:ems="10"
        android:hint="@string/hint_pin_code"
        android:maxLength="6"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <EditText
        android:id="@+id/state_ap_ET"
        style="@style/EditTextCustomMain"
        android:ems="10"
        android:hint="@string/hint_state"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pincode_ET" />

    <EditText
        android:id="@+id/city_ap_ET"
        style="@style/EditTextCustomMain"
        android:ems="10"
        android:hint="@string/hint_city"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/state_ap_ET" />

    <TextView
        android:id="@+id/show_result_btn_TV"
        style="@style/ButtonCustomBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:hint="@string/hint_result_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_ap_ET" />

    <TextView
        android:id="@+id/result_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp"
        android:text="@string/weather_description"
        android:textAlignment="center"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_result_btn_TV" />

    <TextView
        android:id="@+id/check_btn_TV"
        style="@style/ButtonCustomBlue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingTop="@dimen/_7sdp"
        android:paddingRight="@dimen/_15sdp"
        android:paddingBottom="@dimen/_7sdp"
        android:text="@string/check"
        app:layout_constraintBottom_toBottomOf="@+id/pincode_ET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pincode_ET" />

</androidx.constraintlayout.widget.ConstraintLayout>