<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    tools:context=".activities.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_CG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/light_grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_CG"/>


    <TextView
        android:id="@+id/logo_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logo_txt"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@+id/landing_description_TV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/landing_description_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp"
        android:text="@string/main_description"
        android:textAlignment="center"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_CG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_TV" />

    <EditText
        android:id="@+id/mob_ET"
        style="@style/EditTextCustomMain"
        android:drawableLeft="@drawable/ic_baseline"
        android:ems="10"
        android:hint="@string/hint_mobile"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal_CG"
        app:layout_constraintVertical_bias="0.251" />

    <TextView
        android:id="@+id/continue_btn_TV"
        style="@style/ButtonCustom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/continue_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mob_ET" />

</androidx.constraintlayout.widget.ConstraintLayout>